--- a/src/Components/CSS/IntroBox.css
+++ b/src/Components/CSS/IntroBox.css
@@ -217,3 +217,59 @@
 .diag-card-btn span {
     color: white;
 }
+
+@media only screen and (max-width: 768px){
+    .intro-grid{
+        grid-template-areas: 'intro-box intro-box intro-box intro-box intro-box intro-box' 'last-vis last-vis last-vis last-diag last-diag last-diag';
+        margin-bottom: 0;
+        height: 100vmin;
+    }
+    .intro-box {
+        margin-right: 0;
+        padding-left: 10vmin;
+    }
+    .ques{
+        font-size: 3vmin;
+    }
+    .intro-text{
+        width: 50%;
+        font-size: 2vmin;
+    }
+    .intro-img{
+        height: 35vmin;
+    }
+    .intro-btn{
+        width: 18vmin;
+        height: 4vmin;
+        line-height: 4vmin;
+        font-size: 1.5vmin;
+        margin-top: 7vmin;
+    }
+    .last-vis, .last-diag{
+        width: 40vw;
+        height: 18vh;
+        margin-bottom: 0;
+        margin-top: 3vmin;
+    }
+    .vis-header p, .diag-header p{
+        margin-left: 2vmin;
+    }
+    .calendar p{
+        font-size: 2.5vmin;
+        padding-left: 1vmin;
+    }
+    .cal-item{
+        font-size: 2vmin;
+    }
+    .diag-cards{
+        margin-left: 1vmin;
+        margin-right: 1vmin;
+    }
+    .diag-card-cont{
+        margin: 0.3vmin;
+        margin-top: 2vmin;
+    }
+    .diag-card-img img{
+        height: 7.5vmin;
+    }
+}
