--- a/src/Components/CSS/Recommend.css
+++ b/src/Components/CSS/Recommend.css
@@ -45,3 +45,17 @@
 .rec-card-btn span {
     color: white;
 }
+
+@media only screen and (max-width: 768px){
+    .rec-head{
+        margin-top: 0vmin;
+        margin-left: 4vmin;
+    }
+    .rec-cards{
+        margin-left: 2vmin;
+        margin-right: 2vmin;
+    }
+    .rec-card-img img{
+        height: 25vmin;
+    }
+}
