--- a/src/Components/CSS/Menu.css
+++ b/src/Components/CSS/Menu.css
@@ -4,7 +4,7 @@
 }
 
 .header {
-    width: 100vw;
+    width: 100%;
     height: 13vmin;
     background-color: #E1147D;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
@@ -37,6 +37,7 @@
 }
 
 .logo img {
+    height: 8vmin;
     position: relative;
     top: 50%;
     transform: translate(0, -50%);
@@ -78,7 +79,7 @@
 
 .opt-box{
     height: 8vmin;
-    padding: 0.1vmin !important;
+    padding: 0vmin !important;
 }
 
 .opt-box div{
