completed start diagnosis section and know your skin section

--- a/src/Components/CSS/Menu.css
+++ b/src/Components/CSS/Menu.css
@@ -135,3 +135,12 @@
     font-size: 2.3vmin;
     line-height: 8vmin;
 }
+
+.opt-box li {
+    padding: 0 !important;
+}
+
+.isactive div{
+    background-color: #E1147D;
+    color: white;
+}
