--- a/src/Components/UploadImage/CSS/UploadImage.css
+++ b/src/Components/UploadImage/CSS/UploadImage.css
@@ -2,11 +2,10 @@
     width: 80vw;
     box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.25), -4px -4px 6px rgba(222, 222, 222, 0.25);
     border-radius: 1vmin;
-    position: fixed;
+    position: relative;
     height: auto;
-    left: 50%;
-    transform: translate(-50%);
     margin-top: 5vmin;
+    padding-bottom: 5vmin;
 }
 
 * {
@@ -109,7 +108,7 @@
     box-shadow: none;
 }
 
-@media only screen and (max-width: 720px){
+@media only screen and (max-width: 768px){
     .container{
         width: 95vw;
     }
